--- a/src/Components/ChatApp.css
+++ b/src/Components/ChatApp.css
@@ -1,9 +1,9 @@
-.signup-main{
+.main-box{
     display:block;
     width:590px;
     margin-top:20vh;
     margin-left: 45vh;
-    height: max-content;
+    height: 60vh;
     background-color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.55);
 }
