--- a/codefury-client-application/src/Pages/OnlineHarrasmentPage/OnlineHarassment.css
+++ b/codefury-client-application/src/Pages/OnlineHarrasmentPage/OnlineHarassment.css
@@ -2,7 +2,7 @@
 display: flex;
 justify-content: center;
 align-items: center;
-margin-left: -800px;
+margin-left: -500px;
 }
 .signup-main{
     width:590px;
@@ -49,7 +49,7 @@ margin-left: -800px;
 .image-preview-container{
     margin-top: 20vh;
     height: 60vh;
-    width: 30vw;
+    width: 30%;
     margin-left: 115px;
     overflow:scroll;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.55);
