--- a/codefury-client-application/src/Pages/OnlineHarrasmentPage/OnlineHarassment.css
+++ b/codefury-client-application/src/Pages/OnlineHarrasmentPage/OnlineHarassment.css
@@ -1,57 +1,59 @@
-.main-container{
-display: flex;
-justify-content: center;
-align-items: center;
-margin-left: -500px;
+.container{
+    margin-left: -20vw;
 }
-.signup-main{
-    width:590px;
+
+.signup-main {
+    width: 590px;
     height: max-content;
     background-color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.55);
 }
-.additional{
-    display: flex;
 
+.additional {
+    display: flex;
     justify-content: space-around;
     align-items: center;
 }
-.headers{
+
+.headers {
     margin-bottom: 50px;
     padding-top: 15px;
-    width: 100%; /* Adjust the width to fill the available space */
+    width: 100%;
     padding-left: 45px;
 }
-.headers p{
-    padding-top:-15px;
+
+.headers p {
+    padding-top: -15px;
 }
-.Extra{
+
+.Extra {
     margin-top: 10px;
     width: 425px;
 }
-#signupbtn{
+
+#signupbtn {
     display: flex;
     margin-top: 30px;
     margin-bottom: 25px;
-    width:425px;
+    width: 425px;
 }
-#authLink{
+
+#authLink {
     cursor: pointer;
 }
-.signup-page{
+
+.signup-page {
     display: flex;
     justify-content: space-around;
     height: 100vh;
-    
     width: 100%;
-    /* height:45vh; */
 }
-.image-preview-container{
+
+.image-preview-container {
     margin-top: 20vh;
     height: 60vh;
     width: 30%;
     margin-left: 115px;
-    overflow:scroll;
+    overflow: scroll;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.55);
-
-} 
+}
