--- a/codefury-client-application/src/Pages/AuthenticationPage/Signup.css
+++ b/codefury-client-application/src/Pages/AuthenticationPage/Signup.css
@@ -1,55 +1,70 @@
-.signup-main{
-    display:block;
-    width:590px;
-    margin-top:20vh;
-    margin-left: 75vh;
-    height: max-content;
+.signup-main {
     background-color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.55);
+    /* border: 2px solid red; */
+    overflow: hidden;
+    margin: auto;
+    margin-top: 100px;
+    width: max-content;
+    padding: 25px;
 }
-.additional{
+
+.auth-from {
+    display: flex;
+    flex-direction: column;
+}
+
+.additional {
     display: flex;
 
     justify-content: space-around;
     align-items: center;
 }
-.headers{
+
+.headers {
     margin-bottom: 50px;
     padding-top: 15px;
-    width: 100%; /* Adjust the width to fill the available space */
+    width: 100%;
+    /* Adjust the width to fill the available space */
     padding-left: 45px;
 }
-.headers p{
-    padding-top:-15px;
+
+.headers p {
+    padding-top: -15px;
 }
-.Extra{
+
+.Extra {
     margin-top: 10px;
     width: 425px;
 }
-#signupbtn{
+
+#signupbtn {
     display: flex;
     margin-top: 30px;
     margin-bottom: 25px;
-    width:425px;
+    width: 425px;
 }
-#authLink{
+
+#authLink {
     cursor: pointer;
     margin-left: -300px;
 }
-.signup-page{
+
+.signup-page {
     display: flex;
     justify-content: space-around;
     height: 100vh;
-    
+
     width: 100%;
     /* height:45vh; */
 }
-.image-preview-container{
+
+.image-preview-container {
     margin-top: 20vh;
     height: 60vh;
     width: 30%;
     margin-left: 115px;
-    overflow:scroll;
+    overflow: scroll;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.55);
 
 }
