--- a/codefury-client-application/src/Pages/ChatBotPage/ChatBot.css
+++ b/codefury-client-application/src/Pages/ChatBotPage/ChatBot.css
@@ -15,7 +15,7 @@
 }
 
 .main-container {
-
+    padding: 20px;;
     margin-top: 20vh;
     display: flex;
     flex-direction: column;
@@ -36,15 +36,23 @@ form {
     align-items: center;
     padding: 10px;
 }
-
+.form-chatbot{
+    display: flex;
+    height: 30px;
+    justify-content: space-between;
+    align-items: center;
+}
 #input {
-    flex: 1;
+    height: 100%;
+    padding: 5px;
+    margin: 5px;
 }
 
 #submitbtn {
-    margin-top: 10px;
-    height: 9vh;
-    flex-shrink: 0;
+    padding: 5px;background-color: blue;
+    color: white;
+    margin-left: 10px;
+    cursor: pointer;
 }
 
 .body-container {
