--- a/codefury-client-application/src/Pages/OnlineHarrasmentPage/OnlineHarassment.css
+++ b/codefury-client-application/src/Pages/OnlineHarrasmentPage/OnlineHarassment.css
@@ -1,19 +1,23 @@
-.container{
-    margin-left: -20vw;
+.harrasment-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
-
-.signup-main {
+.signup-page{
+    width:max-content;
+}
+/* .signup-main {
     width: 590px;
     height: max-content;
     background-color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.55);
-}
-
+} */
+/* 
 .additional {
     display: flex;
     justify-content: space-around;
     align-items: center;
-}
+} */
 
 .headers {
     margin-bottom: 50px;
@@ -42,18 +46,17 @@
     cursor: pointer;
 }
 
-.signup-page {
+/* .signup-page {
     display: flex;
     justify-content: space-around;
     height: 100vh;
     width: 100%;
-}
+} */
 
 .image-preview-container {
-    margin-top: 20vh;
+    margin:50px;
     height: 60vh;
     width: 30%;
-    margin-left: 115px;
     overflow: scroll;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.55);
 }
